PLUGINWIZARD-45 : Store the plugin's model in a flexible JSON structure instead of tables
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49756 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_html_business_files.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_html_business_files.html
@@ -8,25 +8,25 @@
 <div class="row-fluid" >
     <div class="span12">
 
-    <form class="form-horizontal" method="post"  name="create_${business_class.businessClass?lower_case}" id="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/DoCreate${business_class.businessClass?cap_first}.jsp">
+    <form class="form-horizontal" method="post"  name="create_${business_class.businessClass?lower_case}" id="create_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name?lower_case}/DoCreate${business_class.businessClass?cap_first}.jsp">
         <fieldset>
-            <legend>${i18n_open}${business_class.businessPluginName?lower_case}.create_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
+            <legend>${i18n_open}${plugin_name?lower_case}.create_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
 
             <#list business_class.attributes as attribute>
             <#if attribute.attributeName = business_class.primaryKey>
-            <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
+            <input type="hidden" id="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" name="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}"  />
             <#else>
             <div class="control-group">
-                <label class="control-label" for="${business_class.businessClass?lower_case}_${attribute.name?uncap_first}" >${i18n_open}${business_class.businessPluginName?lower_case}.create_${business_class.businessClass?lower_case}.rowTitle${attribute.attributeName?cap_first}${i18n_close} * :</label>
+                <label class="control-label" for="${business_class.businessClass?lower_case}_${attribute.name?uncap_first}" >${i18n_open}${plugin_name?lower_case}.create_${business_class.businessClass?lower_case}.rowTitle${attribute.attributeName?cap_first}${i18n_close} * :</label>
                 <div class="controls">
-                    <input type="text" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" size="60" maxlength="50" tabindex="1" />
+                    <input type="text" id="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" name="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" size="60" maxlength="50" tabindex="1" />
                 </div>
             </div>
             </#if>
             </#list>
             <div class="form-actions">
-                <input class="btn btn-primary" type="submit" value="${i18n_open}${business_class.businessPluginName?lower_case}.create_${business_class.businessClass?lower_case}.buttonValidate${i18n_close}" tabindex="3" />
+                <input class="btn btn-primary" type="submit" value="${i18n_open}${plugin_name?lower_case}.create_${business_class.businessClass?lower_case}.buttonValidate${i18n_close}" tabindex="3" />
             </div>
         </fieldset>
     </form>
@@ -45,20 +45,20 @@
 <div class="row-fluid" >
     <div class="span12">
 
-    <form class="form-horizontal" method="post"  name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/DoModify${business_class.businessClass?cap_first}.jsp">
+    <form class="form-horizontal" method="post"  name="modify_${business_class.businessClass?lower_case}" action="jsp/admin/plugins/${plugin_name?lower_case}/DoModify${business_class.businessClass?cap_first}.jsp">
         <fieldset>
-            <legend>${i18n_open}${business_class.businessPluginName?lower_case}.modify_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
+            <legend>${i18n_open}${plugin_name?lower_case}.modify_${business_class.businessClass?lower_case}.tableLabel${i18n_close}</legend>
 
             <#list business_class.attributes as attribute>
             <#if attribute.attributeName = business_class.primaryKey>
 
-            <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}"/>
+            <input type="hidden" id="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" name="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}"/>
             <#else>
 
             <div class="control-group">
-                <label class="control-label" for="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" >${i18n_open}${business_class.businessPluginName?lower_case}.modify_${business_class.businessClass?lower_case}.rowTitle${attribute.attributeName?cap_first}${i18n_close} * :</label>
+                <label class="control-label" for="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" >${i18n_open}${plugin_name?lower_case}.modify_${business_class.businessClass?lower_case}.rowTitle${attribute.attributeName?cap_first}${i18n_close} * :</label>
                 <div class="controls">
-                    <input type="text" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" size="60" maxlength="50" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" tabindex="1" />
+                    <input type="text" id="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" name="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" size="60" maxlength="50" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}${bra_close}" tabindex="1" />
                 </div>
             </div>
             </#if>
@@ -66,7 +66,7 @@
 
 
             <div class="form-actions">   
-                <input class="btn btn-primary" type="submit" value="${i18n_open}${business_class.businessPluginName?lower_case}.modify_${business_class.businessClass?lower_case}.buttonModify${business_class.businessClass?cap_first}${i18n_close}" tabindex="3" />
+                <input class="btn btn-primary" type="submit" value="${i18n_open}${plugin_name?lower_case}.modify_${business_class.businessClass?lower_case}.buttonModify${business_class.businessClass?cap_first}${i18n_close}" tabindex="3" />
                 <input class="btn" type="button" onclick="javascript:history.go(-1)" value="#i18n{portal.admin.message.buttonCancel}" />	
             </div>
 
@@ -86,14 +86,14 @@
 <div class="row-fluid" >
     <div class="span12">
 
-        <form method="post"  action="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/Create${business_class.businessClass?cap_first}.jsp">
+        <form method="post"  action="jsp/admin/plugins/${plugin_name?lower_case}/Create${business_class.businessClass?cap_first}.jsp">
             <button class="btn btn-primary pull-right" type="submit">
                 <i class="icon-plus icon-white"></i>
-                ${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}s.buttonAdd${business_class.businessClass?cap_first}${i18n_close}
+                ${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.buttonAdd${business_class.businessClass?cap_first}${i18n_close}
             </button>
         </form>
 
-    <h4>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}s.tableLabel${i18n_close}</h4>    
+    <h4>${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.tableLabel${i18n_close}</h4>    
 
     <${macro}paginationAdmin paginator=paginator combo=1 />
     
@@ -101,9 +101,9 @@
         <tr>
             <#list business_class.attributes as attribute>
                 <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
+                    <input type="hidden" id="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" name="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}"  />
                 <#else>
-                    <th>${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClass?lower_case}s.column${attribute.attributeName?cap_first}${i18n_close}</th>
+                    <th>${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.column${attribute.attributeName?cap_first}${i18n_close}</th>
                 </#if>
             </#list>
             <th>${i18n_open}portal.util.labelActions${i18n_close}</th>
@@ -112,7 +112,7 @@
         <tr>
             <#list business_class.attributes as attribute>
                 <#if attribute.attributeName = business_class.primaryKey>
-                    <input type="hidden" id="${business_class.businessClassParam}_${attribute.attributeName?lower_case}" name="${business_class.businessClassParam}_${attribute.attributeName?lower_case}"  />
+                    <input type="hidden" id="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}" name="${business_class.businessClass?lower_case}_${attribute.attributeName?lower_case}"  />
                 <#else>
                     <#if attribute.attributeName = business_class.classDescription>
                         <td>
@@ -126,12 +126,12 @@
                 </#if>                
         </#list>
         <td>
-            <a href="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/Modify${business_class.businessClass?cap_first}.jsp?${business_class.businessClass?lower_case}_${business_class.primaryKey}=${bra_open}${business_class.businessClassParam?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Modify${business_class.businessClass?cap_first}.jsp?${business_class.businessClass?lower_case}_${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
                class="btn btn-primary btn-small" title="${i18n_open}portal.util.labelModify${i18n_close}">
                 <i class="icon-edit icon-white"></i>
             </a>
 
-            <a href="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/Remove${business_class.businessClass?cap_first}.jsp?${business_class.businessClass?lower_case}_${business_class.primaryKey}=${bra_open}${business_class.businessClassParam?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
+            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Remove${business_class.businessClass?cap_first}.jsp?${business_class.businessClass?lower_case}_${business_class.primaryKey}=${bra_open}${business_class.businessClass?lower_case?lower_case}.${business_class.primaryKeyName?uncap_first}${bra_close}"
                class="btn btn-danger btn-small" title="${i18n_open}portal.util.labelDelete${i18n_close}" >
                 <i class="icon-trash icon-white"></i>
             </a>
