--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_html_tabs_file.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_html_tabs_file.html
@@ -3,9 +3,9 @@
     <ul class="nav nav-tabs">
         <#if business_classes?? > 
         <#list business_classes as business_class>
-        <li <${variable}if tab="${business_class.businessClassLowerCase}">class="active"</${variable}if>>
-            <a href="jsp/admin/plugins/${business_class.businessPluginName?lower_case}/Manage${business_class.businessClass?cap_first}s.jsp">
-                ${i18n_open}${business_class.businessPluginName?lower_case}.manage_${business_class.businessClassLowerCase}s.pageTitle${i18n_close}
+        <li <${variable}if tab="${business_class.businessClass?lower_case}">class="active"</${variable}if>>
+            <a href="jsp/admin/plugins/${plugin_name?lower_case}/Manage${business_class.businessClass?cap_first}s.jsp">
+                ${i18n_open}${plugin_name?lower_case}.manage_${business_class.businessClass?lower_case}s.pageTitle${i18n_close}
             </a>
         </li>
         </#list>	
